--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="google-signin-client_id" content="959028814295-ojio0nureo15e2l4uj2lng0goeef0k27.apps.googleusercontent.com">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://apis.google.com/js/client:platform.js" async defer></script>
     <title>yabs</title>
   </head>
   <body>
